fixed line spacing error on collections page and updated API endpoint for Live version of app

--- a/src/Components/Collections/Collections.css
+++ b/src/Components/Collections/Collections.css
@@ -1,4 +1,5 @@
 .collectionTable {
+    align-content: flex-start;
     width: 930px;
     height: 1100px;
     margin: auto;
@@ -17,6 +18,7 @@
 }
 
 .card {
+    max-height: 300px;
     position: relative;
 }
 
@@ -43,10 +45,10 @@
 }
 
 .deleteButton {
+    position: absolute;
     height: 40px;
     font-size: large;
     font-weight: 600;
-    position: absolute;
     bottom: 50px;
     left: 9px;
     opacity: 0;
